# vector_db_service

./: .gitignore  Dockerfile  README.md  bot.Dockerfile  docker-compose.yaml  pyproject.toml  sample.env
docs/: Company Description - AVE Technologies.md
src/: app.py  bot.py  config.py  creator.py  depends.py  interface.py  main.py  manager.py  session_manager.py  tester.py
src/api/v1/routers/: vectordb.py
src/config/: prompts.py  settings.py
src/configs/: prompts.py
src/embeddings/: base.py  factory.py  huggingface.py
src/logs/: log_config.json
src/schemas/: faiss.py
src/services/: bot.py
src/services/bot/: bot.py
src/services/vectordb/: embeddings.py  manager.py  retriever.py
src/services/vectordb/embeddings/: base.py  factory.py  huggingface.py
src/services/vectordb/vector_stores/: base.py  chroma.py  faiss.py
src/utils/: decorators.py  docs_loader.py
src/vector_stores/: chroma.py  faiss.py
