[project]
name = "vector-db-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.13",
    "huggingface-hub[hf-xet]>=0.33.0",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-huggingface>=0.3.0",
    "langchain-text-splitters>=0.3.8",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "sentence-transformers>=4.1.0",
    "uvicorn>=0.34.3",
]

[dependency-groups]
bot = [
    "aiogram>=3.20.0.post0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "uvicorn>=0.34.3",
]
dev = []
